app/k8s/secure-nginx.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx
spec:
  containers:
    - name: nginx-container
      image: nginx-homes:1.0.0
      ports:
        - containerPort: 80
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        capabilities:
          drop: ["all"]
          add: ["NET_BIND_SERVICE"]
  restartPolicy: Never

#minikube addons enable ingress
#eval $(minikube docker-env)
#docker build -t nginx-homes:1.0.0 .
